<resources>
    <string name="app_name">CalculaIMC</string>
    <string name="weight">Peso:</string>
    <string name="height">Altura:</string>
    <string name="weight_hint">Campo peso deve ser informado.</string>
    <string name="height_hint">Campo altura deve ser informado.</string>
    <string name="result">Resultado:</string>
    <string name="zeros">0,0</string>
    <string name="calculate">Calcular</string>
    <string name="clean">Limpar</string>
    <string name="clean_long_click">Botão para limpar a tela.</string>
    <string name="weight_error">Peso deve ser informado</string>
    <string name="height_error">Altura deve ser informada</string>
</resources>