<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="20dp"
>
    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:hint="@string/weight_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvWeight"
        app:layout_constraintEnd_toEndOf="parent"
    />
    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeight"
    />

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:hint="@string/height_hint"
        app:layout_constraintTop_toTopOf="@+id/tvHeight"
        app:layout_constraintStart_toEndOf="@+id/tvHeight"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
        android:id="@+id/tvResultLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeight"
    />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.Material3.DisplayMedium"
        android:typeface="monospace"
        android:text="@string/zeros"
        android:padding="16dp"
        app:layout_constraintStart_toEndOf="@id/tvResultLabel"
        app:layout_constraintTop_toBottomOf="@id/etHeight"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
    >
        <Button
            android:id="@+id/btCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:padding="16dp"
            />
        <Button
            android:id="@+id/btClean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clean"
            android:padding="16dp"
            android:layout_marginLeft="16dp"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>